--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
 	"version": "0.0.1",
 	"private": true,
 	"scripts": {
+		"//": "for senuka since windows sucks",
+		"install": "pnpx pnpm@latest i",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
