--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"//": "for senuka since windows sucks",
-		"install": "pnpx pnpm@latest i",
+		"actually-install": "pnpx pnpm@latest i",
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
