--- a/.eslintignore
+++ b/.eslintignore
@@ -11,3 +11,9 @@ node_modules
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
+
+.eslintrc.cjs
+tailwind.config.ts
+svelte.config.js
+vite.config.ts
+postcss.config.js
