--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"class-variance-authority": "^0.6.0",
 		"clsx": "^1.2.1",
 		"lucide-svelte": "^0.233.0",
+		"radix-svelte": "^0.7.1",
 		"tailwind-merge": "^1.13.0",
 		"tailwindcss-animate": "^1.0.5"
 	}
