--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"clsx": "^1.2.1",
 		"lucide-svelte": "^0.233.0",
 		"radix-svelte": "^0.7.1",
+		"svelte-splitpanes": "^0.7.14",
 		"tailwind-merge": "^1.13.0",
 		"tailwindcss-animate": "^1.0.5"
 	},
