--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"test:unit": "vitest"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-vercel": "^3.0.1",
@@ -21,11 +22,13 @@
 		"@types/node": "^20.2.5",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
+		"@vitest/browser": "^0.31.4",
 		"autoprefixer": "^10.4.14",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.26.0",
 		"eslint-plugin-unicorn": "^47.0.0",
+		"playwright": "^1.34.3",
 		"postcss": "^8.4.24",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
@@ -35,7 +38,8 @@
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
-		"vite-imagetools": "^5.0.4"
+		"vite-imagetools": "^5.0.4",
+		"vitest": "^0.31.4"
 	},
 	"type": "module",
 	"dependencies": {
