--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.3.0",
 		"vite-imagetools": "^5.0.4",
+		"vite-plugin-wasm": "^3.2.2",
 		"vitest": "^0.31.4"
 	},
 	"type": "module",
@@ -47,6 +48,7 @@
 		"@googlemaps/js-api-loader": "^1.15.2",
 		"class-variance-authority": "^0.6.0",
 		"clsx": "^1.2.1",
+		"greenmotion-wasm": "^0.1.0",
 		"lucide-svelte": "^0.233.0",
 		"radix-svelte": "^0.7.1",
 		"svelte-splitpanes": "^0.7.14",
