--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
 	"prettier.prettierPath": "./node_modules/prettier",
 	"editor.formatOnSave": true,
 	"editor.defaultFormatter": "esbenp.prettier-vscode",
-	"files.eol": "\n"
+	"files.eol": "\n",
+	"editor.useTabStops": true
 }
